- 2022-08-02 v1.7.2 cage ::

  This version  removed an error  signalled when closing  an annotated
  indirect  buffer.  Instead,  when  an annotated  indirect buffer  is
  killed annotate-mode will clone it into a new regular buffer so that
  the user can decide to save it in a file or discard it completely.

  Thanks JuanManuelM!

- 2022-08-02 v1.7.1 cage ::

  This version fix  a bug that prevented saving  some annotations when
  Emacs was closed.

- 2022-05-26 v1.7.0 cage ::

  This  version no  more sets  the buffer  as modified  when the  only
  changes made by  the user to such buffer are  related to annotations
  (for  example, creating  a new  annotation or  deleting an  existing
  one).

- 2022-05-26 v1.6.0 cage ::

  This version  allows users  to instruct the  program to  generate an
  annotation  database for  each annotated  file, instead  of using  a
  central database that contains all the annotations.

- 2022-04-23 v1.5.4 cage ::

  This version  restored redrawing  of annotation  when the  window is
  resized.

- 2022-01-26 v1.5.3 cage ::

  This version  fixed the  email maintainer  list that  was previously
  confusing GNU ELPA building scripts.

- 2022-01-26 v1.5.2 cage ::

  This version fixed a bug that prevented an annotation to be actually
  deleted when the only action on the  buffer was a single call of the
  command  `annotate-delete-annotation'.  Also,  again  thanks to  the
  help of  an Emacs maintainer,  the code was simplified  and cleaned,
  and a few of docstring was improved too.

- 2022-01-26 v1.5.1 cage ::

  This version refactored  a lot of code thanks to  the suggestions of
  Emacs  maintainer. Several  unused variables  were removed  and some
  portion of the code was simplified.

- 2022-01-26 v1.5.0 cage ::

  This version add a new command to import a database file.

- 2021-09-30 v1.4.3 cage ::

  This  is a bugfix release.

  The  program  would  keep  asking to  confirmation  for  deleting  a