@@ -226,6 +226,11 @@ system's setup (see
 [[https://github.com/bastibe/annotate.el/pull/81][this pull request]]
 for a couple of examples.
 
+Moreover if ~annotate-use-echo-area~ and ~annotate-print-annotation-under-cursor~
+value *both* non null, placing the cursor over an annotated text region will print
+the annotation's text in the minibuffer prefixed by the value of customizable variable
+~annotate-print-annotation-under-cursor-prefix~.
+
 Another alternative way to show annotations is provided by the command:
 ~annotate-summary-of-file-from-current-pos~.
 
@@ -235,6 +240,9 @@ buffer) beyond the current cursor position.
 
 **** related customizable variable
      - ~annotate-use-echo-area~
+     - ~annotate-print-annotation-under-cursor~
+     - ~annotate-print-annotation-under-cursor-prefix~
+     - ~annotate-summary-of-file-from-current-pos~.
 
 * Other commands
 
