@@ -1,3 +1,14 @@
+- 2022-09-21 v1.8.0 cage ::
+
+  This version  allows printing  of the  annotation in  the minibuffer
+  when the cursor is placed over an annotated text region.
+
+  To  activate this  feature set  to non  nil the  values of  these two
+  customizable variables:
+
+  - ~annotate-use-echo-area~
+  - ~annotate-print-annotation-under-cursor~
+
 - 2022-08-02 v1.7.2 cage ::
 
   This version  removed an error  signalled when closing  an annotated
